2014-01-06  Charlie Zender  <zender@uci.edu>

	* Add cnk_map argument to some executables that were missing it

	* Fix recidivist bug where if(sng_cnv_rcd) used instead of if(*sng_cnv_rcd)

2013-01-05  Pedro Vicente  <pvicente@uci.edu>

	* Add ncecat regression #11: Chunking --cnk_plc=all

2014-01-05  Charlie Zender  <zender@uci.edu>

	* Base default cnk_sz_byt on output filesystem blocksize

	* Add chk_sz_byt/cnk_byt input to all netCDF4 writers

2014-01-03  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.0 release procedure:
 	Changes since nco-4_3_9: hash, dyn mmr, ncra.c fixes, hdf4, autocnv, hdn, cnk
	cd ~/nco;cvs tag -d nco-4_4_0;cvs tag -d nco-4_4_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.0 release"
	cvs tag -c nco-4_4_0;cvs tag -c nco-4_4_0-1

	* Implement map_lfp and begin accounting for type size and chunk size in bytes

	* Implement plc_xst and map_xst

	* Implement plc_xpl and correct detour when must_be_chunked

	* Add stubs for two new (and not-yet-supported) chunking maps: map_xst and map_lfp

	* Verified nccopy does not preserve pre-set _Chunksizes when copying variables

	* Revert to completing nco_cnk_sz_set_trv() only when user-specified

	* Fix bug where nco_var_lst_dvd_trv() was called with cnk_map, cnk_plc instead of pck_map, pck_plc

2014-01-02  Charlie Zender  <zender@uci.edu>

	* Add nco_op_typ_cf_sng() for cell_methods functionality

	* Refactored chunking code. Exposed old bug in is_chunked flag. Many regressions.

	* Fixed nco_cnk_sz_set_trv() bug where nco_cnk_dsk_inq() was called with output not input ID

	* Replace cnk_sct with cnk_dmn, cnk with cnk_dmn in preparation	for new chunk structure

	* Add nco_[get/set]_chunk_cache() prototypes

	* Tidy nco_cnk_sz_set_trv()

2013-12-31  Charlie Zender  <zender@uci.edu>

	* Prevent printing hidden attributes on netCDF3 files

	* Fix error when new nco_inq_var_fill() stub used on netCDF3 files
